--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,8 @@ SEOTitle:
 header-img: img/post-bg-desk-1.jpg
 email: xuuuu.liu@gmail.com
 description: ""
-keyword: "liuxu379"
+keyword: ""
 url: "https://liuxu379.github.io"          # your host, for absolute URL
-url: "https://cyntec.cn"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Sidebar settings
