--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title:
 SEOTitle:
-header-img: img/post-bg-desk-1.jpg
+header-img: https://picsum.photos/1900/870
 email: xuuuu.liu@gmail.com
 description: ""
 keyword: ""
