--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title:
 SEOTitle:
-header-img: https://api.1314.cool/bingimg
+header-img: img/post-bg-desk-1.jpg
 
 email: xuuuu.liu@gmail.com
 description: ""
